WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
228579
Non-unified build fixes, late July 2021 edition
https://bugs.webkit.org/show_bug.cgi?id=228579
Summary
Non-unified build fixes, late July 2021 edition
Adrian Perez
Reported
2021-07-28 23:35:26 PDT
🍿
Attachments
Patch
(8.56 KB, patch)
2021-07-28 23:42 PDT
,
Adrian Perez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2021-07-28 23:42:48 PDT
Created
attachment 434500
[details]
Patch
EWS
Comment 2
2021-07-29 04:04:01 PDT
Committed
r280419
(
240059@main
): <
https://commits.webkit.org/240059@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 434500
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-07-29 04:05:22 PDT
<
rdar://problem/81263908
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug