Non-unified build fixes, late July 2021 edition https://bugs.webkit.org/show_bug.cgi?id=228579

Unreviewed non-unified build fixes.


Source/WebCore:

* Modules/webaudio/AudioContextOptions.h: Add missing <optional> header.
* html/BaseDateAndTimeInputType.cpp: Add missing "FrameView.h" header.
* page/PageConfiguration.cpp: Add missing "BroadcastChannelRegistry.h" header.

Source/WebKit:

* NetworkProcess/IndexedDB/WebIDBServer.cpp: Add missing "Logging.h" header.
* NetworkProcess/NetworkBroadcastChannelRegistry.cpp: Add missing
<WebCore/MessageWithMessagePorts.h> header.
* NetworkProcess/NetworkConnectionToWebProcess.cpp: Add missing
"NetworkBroadcastChannelRegistry.h" header.
* UIProcess/gtk/WebDateTimePickerGtk.cpp:
(WebKit::timeToString): Add missing WebCore:: namespace prefix to usages of constants of the
WebCore::SecondFormat enum.
* WebProcess/WebPage/CoordinatedGraphics/DrawingAreaCoordinatedGraphics.cpp: Add missing
<WebCore/FrameView.h> header.
* WebProcess/WebPage/CoordinatedGraphics/LayerTreeHost.cpp: Add missing
<WebCore/RenderView.h> header.
* WebProcess/gtk/GtkSettingsManagerProxy.cpp: Add missing "WebCore.h" header.


Canonical link: https://commits.webkit.org/240059@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280419 268f45cc-cd09-0410-ab3c-d52691b4dbfc